# PBGNN

./: .gitignore  env.toml  pyproject.toml  readme.md  requirements.txt
checkpoints/amber_pbsa/: data_split.json  pbgnn_model.safetensors
checkpoints/pbsmall/: data_split.json
configs/epb_3d/: config.py  experiment.py  experiment_atomic.py  experiment_config.py  experiment_unet.py  misc.py  model.py  model_atomic.py  model_unet.py  trainer.py  trainer_atomic.py
configs/preprocess/: epb_dataset.py
scripts/3d/: count_model_size.py  prepare_3d_energy_sparse_dataset.py  test_3d_energy_distributed.py  train_3d_energy_distributed.py
scripts/3d/bash/: count_model_size.sh  preprocess.sh  test.sh  train.sh
src/: args.py  base.py  config.py  data.py  data_aug.py  func_lib.py  model.py  slurm.py  trainer.py  utils.py
src/nn/: pbgnn.py  unet.py
src/preprocess/: file_helper.py
wheel/: nntool-1.6.2-py3-none-any.whl
