[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbgnn"
description = "A data-driven reaction field energy modeling by geometric graph neural network"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yongxian Wu", email = "yongxian.wu@uci.edu" }]
keywords = [
    "reaction field",
    "energy",
    "graph neural network",
    "geometric graph neural network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "torch==2.2.2",
    "tqdm==4.67.0",
    "schnetpack==2.0.4",
    "monai==1.3.2",
    "accelerate==0.28.0",
    "wandb==0.16.5",
    "nntool==1.6.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "ruff>=0.11.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pbgnn = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "src.version.VERSION" }

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "docs*", "scripts*"]

[tool.ruff]
# Specify the Python version you're targeting
target-version = "py39"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",        # Exclude notebooks from ruff checks
]

[tool.ruff.lint]
ignore = ["F405", "F403", "E741", "E712"]
